pushit bla mantesti

--- a/Config/webserv.conf
+++ b/Config/webserv.conf
@@ -12,7 +12,12 @@ SERVER = [
 SERVER = [
     port = 8080;
     host = 0.0.0.0;
-
-
     route = /shop : ROOT=/tmp/www/shop, ALLOWED_METHODS= GET;
+]
+
+
+SERVER = [
+    port = 9991;
+    host = 13.13.13.0;
+    route = /hack : ROOT=/tmp/www/shop, ALLOWED_METHODS= GET;
 ]
