adding cgi and session and cookies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,11 @@
         "variant": "cpp",
         "expected": "cpp",
         "spanstream": "cpp",
-        "stacktrace": "cpp"
+        "stacktrace": "cpp",
+        "format": "cpp",
+        "generator": "cpp",
+        "print": "cpp",
+        "stdfloat": "cpp",
+        "text_encoding": "cpp"
     }
 }
