--- a/webserv.conf
+++ b/webserv.conf
@@ -9,7 +9,7 @@ SERVER = [
 
 
     route = / : ROOT=www/html, DEFAULT_FILE=index.html,ALLOWED_METHODS=GET-POST-DELETE, DIR_LISTING=on, CGI_EXTENTION =.php - .py, UPLOAD_DIR=www/html/uploads;
-    route = /contact-us : ROOT=www/html/contact-us, DEFAULT_FILE=contact.html, ALLOWED_METHODS=GET-POST-DELETE, DIR_LISTING=on, UPLOAD_DIR=www/html/uploads; 
+    route = /contact-us : ROOT=www/html/contact-us, DEFAULT_FILE=contact.html, ALLOWED_METHODS=GET-POST-DELETE, DIR_LISTING=on, CGI_EXTENTION =.php - .py - .sh, UPLOAD_DIR=www/html/uploads; 
     route = /uploads : ROOT=www/html/uploads, DEFAULT_FILE=upload.html, ALLOWED_METHODS=GET-POST-DELETE;
     route = /auto-index : ROOT=www/html/auto-index, ALLOWED_METHODS=GET, DIR_LISTING=on;
 ]
